--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,2 +1,2 @@
-spring.application.name = eureka-provider-dev
-fileName = application.dev.properties
+spring.application.name=eureka-provider-dev
+fileName=application-dev.properties
